Bug 729143.  Don't treat table rows as containing blocks.  r=dbaron